doc: Add 'CNN Example' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -564,6 +564,74 @@
    "cell_type": "markdown",
    "id": "bfbe7077",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cde18312",
+   "metadata": {},
+   "source": [
+    "## Neural Network Example\n",
+    "\n",
+    "This section demonstrates the architectural integration of a full Convolutional Neural Network (ConvNet). This example follows the classic logic of the LeNet-5 architecture, which is a foundational model for handwritten digit recognition.\n",
+    "\n",
+    "### ConvNet Layer Convention\n",
+    "\n",
+    "There is a common point of confusion in AI literature regarding what constitutes a \"layer\":\n",
+    "* **The Weight Rule:** Most practitioners only count layers that contain learnable parameters (weights and biases).\n",
+    "* **Grouping:** Because Pooling layers have no weights, they are typically grouped with the preceding Convolutional layer. Thus, \"Layer 1\" is often defined as $(\\text{Conv1} + \\text{Pool1})$.\n",
+    "\n",
+    "### The Progressive Architecture (Example Walkthrough)\n",
+    "\n",
+    "A standard network follows a repeating pattern of feature extraction followed by classification.\n",
+    "1. **Feature Extraction (Layers 1 & 2):**\n",
+    "    * **Layer 1:** A $32\\times32\\times3$ input is convolved with $6$ filters ($5\\times5$), resulting in $28\\times28\\times6$. It is then downsampled via Max Pooling ($f=2, s=2$) to $14\\times14\\times6$.\n",
+    "    * **Layer 2:** A second convolution with $16$ filters ($5\\times5$) results in $10\\times10\\times16$, which is pooled down to $5\\times5\\times16$.\n",
+    "2. **Flattening:** The final $5\\times5\\times16$ volume is \"unrolled\" into a 1D vector of $400$ units ($5\\times5\\times16 = 400$).\n",
+    "3. **Classification (Fully Connected Layers):**\n",
+    "    * **FC3:** $400$ units connect to $120$ neurons.\n",
+    "    * **FC4:** $120$ units connect to $84$ neurons.\n",
+    "    * **Output Layer:** $84$ units connect to a Softmax layer with $10$ outputs (representing digits $0$ through $9$).\n",
+    "\n",
+    "<img src='images/cnn_example.png' width=900px>\n",
+    "\n",
+    "### Parameter vs. Activation Trends\n",
+    "\n",
+    "Analyzing the data flow of a ConvNet reveals several critical patterns:\n",
+    "* **Spatial Dimensions ($n_H, n_W$):** Gradually decrease as you go deeper ($32 \\to 28 \\to 14 \\to 10 \\to 5$).\n",
+    "* **Channel Depth ($n_c$):** Gradually increases ($3 \\to 6 \\to 16$).\n",
+    "* **Parameter Distribution:**\n",
+    "    * **Conv Layers:** Use relatively few parameters due to weight sharing.\n",
+    "    * **FC Layers:** Contain the vast majority of the network's parameters.\n",
+    "    * **Pool Layers:** Contain exactly $0$ parameters.\n",
+    "* **Activation Size:** Ideally should decrease gradually. A sudden \"drop\" in activation size can lead to a loss of representational power.\n",
+    "\n",
+    "### Dimensionality Summary Table\n",
+    "\n",
+    "For an input $32\\times32\\times3$, the transformation looks like this:\n",
+    "\n",
+    "| Layer | Type | Activation Shape | Activation Size | Parameters |\n",
+    "| --- | --- | --- | --- | --- |\n",
+    "| Input | Image | $32 \\times 32 \\times 3$ | 3,072 | $0$ |\n",
+    "| Layer 1 | Conv | $28 \\times 28 \\times 6$ | 4,704 | $(\\text{f} \\cdot \\text{f} \\cdot 3 + 1) \\cdot 6 = 456$|\n",
+    "| Layer 1 | Pool | $14 \\times 14 \\times 6$ | 1,176 | 0 |\n",
+    "| Layer 2 | Conv | $10 \\times 10 \\times 16$ | 1,600 | $(\\text{f} \\cdot \\text{f} \\cdot 6 + 1) \\cdot 16 = 2,416$ |\n",
+    "| Layer 2 | Pool | $5 \\times 5 \\times 16$ | 400 | 0 |\n",
+    "| FC 3 | Dense | $120 \\times 1$ | 120 |$400 \\cdot 120 + 120 = 48,120$ |\n",
+    "| FC 4 | Dense | $84 \\times 1$ | 84 | $120 \\cdot 84 + 84 = 10,164$ |\n",
+    "| Output | Softmax | $10 \\times 1$ | 10 | $84 \\cdot 10 + 10 = 850$|\n",
+    "\n",
+    "### Expert Advice\n",
+    "\n",
+    "When designing your own network, don't try to \"guess\" these hyperparameters ($f, s, p, n_c$) from scratch. The industry standard is to start with a proven architecture (like LeNet, AlexNet, or VGG) that has worked on similar datasets and adapt it to your specific needs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34485bd9",
+   "metadata": {},
    "source": []
   }
  ],
