doc: Add 'Why Convolutions' section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -632,6 +632,65 @@
    "cell_type": "markdown",
    "id": "34485bd9",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b15eb60",
+   "metadata": {},
+   "source": [
+    "## Why Convolutions?\n",
+    "\n",
+    "This section discusses the concluding concepts for this week regarding why Convolutional Neural Networks (CNNs) are mathematically and practically superior to standard networks for computer vision.\n",
+    "\n",
+    "### The Two Primary Advantages of Convolutions\n",
+    "\n",
+    "CNNs use significantly fewer parameters than Fully Connected (FC) networks, which makes them faster to train and less prone to overfitting.\n",
+    "\n",
+    "* **Parameter Sharing:** A feature detector (like a vertical edge detector) that is useful in the top-left of an image is likely useful in the bottom-right. Instead of learning a different detector for every pixel location, the CNN learns one set of filter weights and applies it across the entire image.\n",
+    "    * *Example:* A $5\\times5$ filter has only $26$ parameters (including bias), regardless of the input image size.\n",
+    "* **Sparsity of Connections:** In a convolutional layer, each output value depends only on a small local region of the input (the size of the filter).\n",
+    "    * *Example:* In a $3\\times3$ convolution, one output unit is connected to only $9$ input pixels. In an FC layer, that same unit would be connected to every single pixel in the image.\n",
+    "\n",
+    "### Parameter Comparison Example\n",
+    "\n",
+    "Consider a $32\\times32\\times3$ input ($3,072$ units) transforming into a $28\\times28\\times6$ output ($4,704$ units).\n",
+    "* Fully Connected Approach:\n",
+    "\n",
+    "$$3,072 \\times 4,704 \\approx 14,000,000\\text{ parameters}$$\n",
+    "\n",
+    "* Convolutional Approach ($6$ filters of $5\\times5$):\n",
+    "\n",
+    "$$(5 \\times 5 \\times 3 + 1) \\times 6 = 456\\text{ parameters}$$\n",
+    "\n",
+    "The CNN reduces the parameter count by more than $30,000$ times in this single layer transition.\n",
+    "\n",
+    "### Translation Invariance\n",
+    "\n",
+    "CNNs naturally capture Translation Invariance, which is the property that an object (like a cat) is still the same object even if it is shifted a few pixels in any direction. Because the network applies the same filters across all positions, it learns to recognize features regardless of their specific coordinates.\n",
+    "\n",
+    "### Training the Network\n",
+    "\n",
+    "Training a CNN follows the same fundamental principles as a standard Deep Neural Network:\n",
+    "1. **Initialization:** Randomly initialize weights $W$ and biases $b$.\n",
+    "2. **Forward Prop:** Pass the image through Conv, Pool, and FC layers to generate a prediction $\\hat{y}$.\n",
+    "3. **Cost Function:** Calculate the total loss $J$ over $m$ training examples:\n",
+    "\n",
+    "$$J = \\frac{1}{m}\\sum_{i=1}^{m}\\mathcal{L}(\\hat{y}^{(i)}, y^{(i)})$$\n",
+    "\n",
+    "4. **Optimization:** Use algorithms like Gradient Descent, Momentum, RMSProp, or Adam to update the parameters and minimize the cost.\n",
+    "\n",
+    "### Final Pro Tip\n",
+    "\n",
+    "Due to the high number of hyperparameters in CNNs, the most effective strategy for most developers is **Transfer Learning** or **Architecture Adaptation**: using a structure that has already been proven effective in research (like ResNet or Inception) and fine-tuning it for your specific data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d1f7295",
+   "metadata": {},
    "source": []
   }
  ],
