doc: add subtle changes in a few sections for clarity.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "* **Small Images:** A $64 \\times 64$ RGB image has 12,288 features ($64 \\times 64 \\times 3$), which is manageable for standard fully connected networks.\n",
     "* **Large Images:** A modest $1000 \\times 1000$ (1-megapixel) image results in 3,000,000 input features.\n",
-    "* **Parameter Explosion:** * In a fully connected layer with just 1,000 hidden units, a 1-megapixel input would require a weight matrix with 3 billion parameters.\n",
+    "* **Parameter Explosion:** In a fully connected layer with just 1,000 hidden units, a 1-megapixel input would require a weight matrix with 3 billion parameters.\n",
     "* **Overfitting:** With billions of parameters, models are highly prone to overfitting without massive amounts of data.\n",
     "* **Resource Constraints:** The memory and computational power required to train such a network are generally infeasible for standard hardware.\n",
     "\n",
@@ -155,7 +155,7 @@
    "id": "f46c9546",
    "metadata": {},
    "source": [
-    "## More Edge Detection\n",
+    "## More on Edge Detection\n",
     "\n",
     "This section discusses edge detection transitions, specialized filters, and the transition to learned parameters in Convolutional Neural Networks (CNNs).\n",
     "\n",
