doc: fix a small typo.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -555,7 +555,7 @@
     "\n",
     "### Why Use Pooling?\n",
     "\n",
-    "1. **Computational Efficiency:** By shrinking $n_H$ and $n_W$, it reduces the number of operations required in subsequent layers.\n",
+    "* **Computational Efficiency:** By shrinking $n_H$ and $n_W$, it reduces the number of operations required in subsequent layers.\n",
     "* **Robustness:** It provides a form of translational invariance. If a feature shifts by a pixel or two, the \"max\" in that local region will likely stay the same.\n",
     "* **Overfitting Prevention:** By reducing the number of total activations, it helps the network focus on the most important features."
    ]
