doc: fix a few typos associated with output volume HxW calculation.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -278,7 +278,7 @@
     "\n",
     "When combining input size ($n$), filter size ($f$), padding ($p$), and stride ($s$), the dimension of the output is calculated as:\n",
     "\n",
-    "$$\\lfloor\\frac{n+2p-f}{s}+1\\rfloor\\times\\lfloor\\frac{n+2p-f}{s}+1\\rfloor$$\n",
+    "$$(\\lfloor\\frac{n+2p-f}{s}\\rfloor + 1) \\times (\\lfloor\\frac{n+2p-f}{s}\\rfloor + 1)$$\n",
     "\n",
     "The Floor Function: The $\\lfloor{z}\\rfloor$ notation denotes the \"floor\" of $z$, which means rounding down to the nearest integer.\n",
     "\n",
@@ -286,7 +286,7 @@
     "\n",
     "Example: For $n=7, f=3, p=0, s=2$:\n",
     "\n",
-    "$$\\lfloor\\frac{7+0-3}{2}+1\\rfloor=\\lfloor\\frac{4}{2}+1\\rfloor=3$$\n",
+    "$$\\lfloor\\frac{7+0-3}{2}\\rfloor + 1 = \\lfloor\\frac{4}{2}\\rfloor + 1 =3$$\n",
     "\n",
     "The resulting output is a $3\\times3$ matrix.\n",
     "\n",
@@ -425,7 +425,7 @@
     "\n",
     "The height ($n_H$) and width ($n_W$) are calculated using:\n",
     "\n",
-    "$$n_H^{[l]} = \\lfloor \\frac{n_H^{[l-1]} + 2p^{[l]} - f^{[l]}}{s^{[l]}} + 1 \\rfloor$$\n",
+    "$$n_H^{[l]} = \\lfloor \\frac{n_H^{[l-1]} + 2p^{[l]} - f^{[l]}}{s^{[l]}} \\rfloor + 1$$\n",
     "\n",
     "**Weights and Activations:**\n",
     "* **Weights ($W^{[l]}$):** The total volume of weights is $f^{[l]} \\times f^{[l]} \\times n_c^{[l-1]} \\times n_c^{[l]}$.\n",
@@ -490,11 +490,11 @@
     "\n",
     "To compute the spatial size for any layer, we use the generalized formula:\n",
     "\n",
-    "$$n^{[l]} = \\lfloor \\frac{n^{[l-1]} + 2p^{[l]} - f^{[l]}}{s^{[l]}} + 1 \\rfloor$$\n",
+    "$$n^{[l]} = \\lfloor \\frac{n^{[l-1]} + 2p^{[l]} - f^{[l]}}{s^{[l]}} \\rfloor + 1$$\n",
     "\n",
     "For the transition from Layer 1 to Layer 2 in the example:\n",
     "\n",
-    "$$\\lfloor \\frac{37 + 0 - 5}{2} + 1 \\rfloor = \\lfloor \\frac{32}{2} + 1 \\rfloor = 17$$\n",
+    "$$\\lfloor \\frac{37 + 0 - 5}{2} \\rfloor + 1 = \\lfloor \\frac{32}{2} \\rfloor + 1 = 17$$\n",
     "\n",
     "### Three Types of ConvNet Layers\n",
     "\n",
@@ -545,7 +545,7 @@
     "\n",
     "Output Height/Width:\n",
     "\n",
-    "$$\\lfloor\\frac{n+2p-f}{s}+1\\rfloor$$\n",
+    "$$\\lfloor\\frac{n+2p-f}{s}\\rfloor + 1$$\n",
     "\n",
     "Example ($f=2, s=2$):\n",
     "\n",
