doc: Add final points to remember.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -691,6 +691,31 @@
    "cell_type": "markdown",
    "id": "2d1f7295",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eaf6341",
+   "metadata": {},
+   "source": [
+    "<font color='blue'>\n",
+    "    \n",
+    "### What you should remember:\n",
+    "\n",
+    "* A convolution extracts features from an input image by taking the dot product between the input data and a 3D array of weights (the filter). \n",
+    "* The 2D output of the convolution is called the feature map\n",
+    "* A convolution layer is where the filter slides over the image and computes the dot product \n",
+    "    * This transforms the input volume into an output volume of different size \n",
+    "* Zero padding helps keep more information at the image borders, and is helpful for building deeper networks, because you can build a CONV layer without shrinking the height and width of the volumes\n",
+    "* Pooling layers gradually reduce the height and width of the input by sliding a 2D window over each specified region, then summarizing the features in that region."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d639f73",
+   "metadata": {},
    "source": []
   }
  ],
