doc: Add bonus materials section.

--- a/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
+++ b/machine-learning/deep-learning-specialization-coursera/course-4/notebooks/week1.ipynb
@@ -702,7 +702,7 @@
    "source": [
     "<font color='blue'>\n",
     "    \n",
-    "### What you should remember:\n",
+    "## What you should remember:\n",
     "\n",
     "* A convolution extracts features from an input image by taking the dot product between the input data and a 3D array of weights (the filter). \n",
     "* The 2D output of the convolution is called the feature map\n",
@@ -715,6 +715,241 @@
   {
    "cell_type": "markdown",
    "id": "7d639f73",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4753197e",
+   "metadata": {},
+   "source": [
+    "## Bonus Materials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c50c8c6e",
+   "metadata": {},
+   "source": [
+    "### ConvNet Implementation Using TensorFlow API\n",
+    "\n",
+    "In TensorFlow (TF) Keras, you don't have to write code directly to create layers. Rather, TF Keras has pre-defined layers you can use. When you create a layer in TF Keras, you are creating a function that takes some input and transforms it into an output you can reuse later.\n",
+    "\n",
+    "Keras is a high-level abstraction built on top of TensorFlow, which allows for even more simplified and optimized model creation and training.\n",
+    "\n",
+    "TF Keras' Sequential API, which allows you to build layer by layer, and is ideal for building models where each layer has exactly one input tensor and one output tensor. You can add layers incrementally to a Sequential model with the `.add()` method, or remove them using the `.pop()` method, much like you would in a regular Python list. You can think of a Sequential model as behaving like a list of layers. Like Python lists, Sequential layers are ordered, and the order in which they are specified matters. If your model is non-linear or contains layers with multiple inputs or outputs, a Sequential model wouldn't be the right choice. In this case, the Functional API can be used for building more flexible, powerful models.\n",
+    "\n",
+    "For any layer construction in Keras, you'll need to specify the input shape in advance. This is because in Keras, the shape of the weights is based on the shape of the inputs. The weights are only created when the model first sees some input data. Sequential models can be created by passing a list of layers to the Sequential constructor.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "# Import necessary modules\n",
+    "import tensorflow as tf\n",
+    "import tensorflow.keras.layers as tfl\n",
+    "\n",
+    "# Buil the model layers.\n",
+    "model = tf.keras.Sequential([\n",
+    "    ## Input shape\n",
+    "    tfl.Input(shape=(64, 64, 3)),\n",
+    "\n",
+    "    ## ZeroPadding2D with padding 3, input shape of 64 x 64 x 3\n",
+    "    tfl.ZeroPadding2D(padding=3, data_format='channels_last'),\n",
+    "    \n",
+    "    ## Conv2D with 32 7x7 filters and stride of 1\n",
+    "    tfl.Conv2D(\n",
+    "        32,\n",
+    "        7,\n",
+    "        strides=(1, 1),\n",
+    "        padding='valid',\n",
+    "        data_format='channels_last',\n",
+    "        dilation_rate=(1, 1),\n",
+    "        groups=1,\n",
+    "        activation=None,\n",
+    "        use_bias=True,\n",
+    "        kernel_initializer='glorot_uniform',\n",
+    "        bias_initializer='zeros',\n",
+    "        kernel_regularizer=None,\n",
+    "        bias_regularizer=None,\n",
+    "        activity_regularizer=None,\n",
+    "        kernel_constraint=None,\n",
+    "        bias_constraint=None\n",
+    "    ),\n",
+    "\n",
+    "    ## BatchNormalization for axis 3\n",
+    "    tfl.BatchNormalization(\n",
+    "        axis=-1,\n",
+    "        momentum=0.99,\n",
+    "        epsilon=0.001,\n",
+    "        center=True,\n",
+    "        scale=True,\n",
+    "        beta_initializer='zeros',\n",
+    "        gamma_initializer='ones',\n",
+    "        moving_mean_initializer='zeros',\n",
+    "        moving_variance_initializer='ones',\n",
+    "        beta_regularizer=None,\n",
+    "        gamma_regularizer=None,\n",
+    "        beta_constraint=None,\n",
+    "        gamma_constraint=None,\n",
+    "    ),\n",
+    "\n",
+    "    ## ReLU\n",
+    "    tfl.ReLU(max_value=None, negative_slope=0.0, threshold=0.0),\n",
+    "\n",
+    "    ## Max Pooling 2D with default parameters\n",
+    "    tfl.MaxPool2D(\n",
+    "        pool_size=(2, 2),\n",
+    "        strides=None,\n",
+    "        padding='valid',\n",
+    "        data_format=\"channels_last\",\n",
+    "        name=None,\n",
+    "    ),\n",
+    "\n",
+    "    ## Flatten layer\n",
+    "    tfl.Flatten(data_format=\"channels_last\"),\n",
+    "\n",
+    "    ## Dense layer with 1 unit for output & 'sigmoid' activation\n",
+    "    tfl.Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "\n",
+    "# Compile the model.\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Summarize information of layers and parameters.\n",
+    "happy_model.summary()\n",
+    "\n",
+    "# Train the model.\n",
+    "model.fit(X_train, Y_train, epochs=10, batch_size=16)\n",
+    "\n",
+    "# Evaluate the model with test set.\n",
+    "model.evaluate(X_test, Y_test)\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e94ac2c1",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "478f5b62",
+   "metadata": {},
+   "source": [
+    "### Dilation Rate in CNN\n",
+    "\n",
+    "In a Convolutional Neural Network (CNN), the **dilation rate** (also known as \"atrous\" convolution) is a hyperparameter that defines the spacing between the values in a convolutional filter.\n",
+    "\n",
+    "Standard convolution typically has a dilation rate of 1. When you increase this rate, you effectively \"stretch\" the filter (increasig thr receptive field) by inserting gaps between its weights.\n",
+    "\n",
+    "#### How it Works\n",
+    "\n",
+    "A $3\\times 3$ filter with a dilation rate of 2 will cover the same spatial area as a $5 \\times 5$ filter, but it still only possesses 9  learnable parameters. The \"holes\" in the filter are filled with zeros, so no extra computation is required for the weights.\n",
+    "\n",
+    "#### Why Use Dilated Convolutions?\n",
+    "\n",
+    "Dilated convolutions are primarily used to manage the **Receptive Field** — the total area of the input image that a single neuron \"sees.\"\n",
+    "1. **Expanded Receptive Field:** It allows the network to capture wider global context without increasing the number of parameters or the computational cost.\n",
+    "2. **No Loss of Resolution:** In standard CNNs, we use **Pooling** to increase the receptive field, but pooling reduces the image resolution (spatial information is lost). Dilated convolutions allow the network to see \"the big picture\" while maintaining the original input resolution.\n",
+    "3. **Efficiency:** It provides the benefits of a large filter (like $7 \\times 7$ or $11 \\times 11$) using the computational budget of a small $3 \\times 3$ filter.\n",
+    "\n",
+    "#### 1. The Mathematical Calculation\n",
+    "\n",
+    "If you have a filter of size $f \\times f$ and a dilation rate of $d$, the **effective filter size** $f_{eff}$ is calculated as:\n",
+    "\n",
+    "$$f_{eff} = f + (f-1)(d-1)$$\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "* For a $3 \\times 3$ filter with $d=2$:\n",
+    "\n",
+    "$$f_{eff} = 3 + (3-1)(2-1) = 5$$\n",
+    "\n",
+    "The filter acts like a $5 \\times 5$ kernel but only uses $9$ weights.\n",
+    "\n",
+    "#### 2. How it is Applied to the Input\n",
+    "\n",
+    "In a standard convolution ($d=1$), the filter pixels are neighbors. In a dilated convolution ($d > 1$), we skip $(d-1)$ pixels between each filter element.\n",
+    "\n",
+    "**Visualizing a $3\\times3$ filter with $d=2$:** Imagine a $3\\times3$ grid of weights. To apply it with a dilation of $2$:\n",
+    "* You place the center weight on a pixel.\n",
+    "* The next weights to the left and right are 2 pixels away from the center.\n",
+    "* The weights above and below are 2 pixels away from the center.\n",
+    "* The \"gaps\" created in the input image are simply ignored (they are not multiplied by any weights).\n",
+    "\n",
+    "#### 3. Calculating the Output Feature Value\n",
+    "\n",
+    "The calculation of a single value in the output feature map follows the same sum-of-products logic as standard convolution, but with a modified indexing.\n",
+    "\n",
+    "For an input $I$ and a filter $K$ of size $2k+1$ (odd size) with dilation $d$, the output $O$ at position $(i, j)$ is:\n",
+    "\n",
+    "$$O(i,j) = \\sum_{m=-k}^{k} \\sum_{n=-k}^{k} I(i + d \\cdot m, j + d \\cdot n) \\cdot K(m, n)$$\n",
+    "\n",
+    "**Example Walkthrough:** If we use a $3\\times3$ filter ($k=1$) and dilation $d=2$: The output value at $O(10, 10)$ would be the sum of:\n",
+    "* $I(10, 10) \\cdot K(0, 0)$ (The center)\n",
+    "* $I(10, 8) \\cdot K(0, -1)$ (Left, 2 pixels away)\n",
+    "* $I(10, 12) \\cdot K(0, 1)$ (Right, 2 pixels away)\n",
+    "* $I(8, 10) \\cdot K(-1, 0)$ (Top, 2 pixels away)\n",
+    "* ...and so on for all 9 points.\n",
+    "\n",
+    "#### 4. Calculating the Output Dimensions\n",
+    "\n",
+    "The spatial dimensions of the output feature map are determined by the effective filter size. As noted previously, a filter of size $f$ with dilation $d$ \"looks\" like a filter of size:\n",
+    "\n",
+    "$$f_{eff} = f + (f - 1)(d - 1)$$\n",
+    "\n",
+    "The standard formula for output height ($n_H$) and width ($n_W$) then applies:\n",
+    "\n",
+    "$$n_{out} = \\lfloor \\frac{n_{in} + 2p - f_{eff}}{s} \\rfloor + 1$$\n",
+    "\n",
+    "Where:\n",
+    "* $n_{in}$ = Input size\n",
+    "* $p$ = Padding\n",
+    "* $s$ = Stride\n",
+    "\n",
+    "#### Summary Table: Standard vs. Dilated\n",
+    "\n",
+    "| Feature | Standard () | Dilated () |\n",
+    "| --- | --- | --- |\n",
+    "| **Filter size** |  |  |\n",
+    "| **Parameters** |  |  |\n",
+    "| **Input Area Covered** |  pixels |  pixels |\n",
+    "| **Computation Cost** | 9 Multiplications | 9 Multiplications |\n",
+    "| **Resolution Loss** | Depends on stride/pooling | None (unless stride ) |\n",
+    "\n",
+    "#### Common Use Cases\n",
+    "* **Semantic Segmentation:** Where you need to classify every pixel and require both local detail and global context (e.g., the **DeepLab** architecture).\n",
+    "* **Real-time Video Processing:** To capture temporal dependencies over longer frames without massive memory overhead.\n",
+    "* **WaveNet (Audio):** Dilated convolutions are a core component of WaveNet, allowing the model to handle long-range dependencies in audio waveforms.\n",
+    "\n",
+    "#### Key Insight\n",
+    "Dilated convolution allows you to increase the **receptive field** exponentially by stacking layers with increasing dilation rates (e.g., ) while keeping the resolution of the image constant. This is why it is the \"engine\" behind modern **image segmentation** models like DeepLab, where we need to know exactly which pixel belongs to which object.\n",
+    "\n",
+    "#### More on Receptive Field\n",
+    "\n",
+    "**How the Receptive Field Grows:** As you go deeper into a Convolutional Neural Network (CNN), the receptive field of the neurons increases.\n",
+    "* **Layer 1:** A neuron only sees a small patch (e.g.,  pixels). It can only detect tiny details like edges or dots.\n",
+    "* **Middle Layers:** Because these neurons look at the output of Layer 1, they are effectively looking at multiple  patches combined. They can see shapes, like curves or corners.\n",
+    "* **Final Layers:** By the end of the network, a single neuron might have a receptive field that covers the **entire  image**. This allows the neuron to \"see\" the whole cat rather than just a patch of fur.\n",
+    "\n",
+    "#### Summary Comparison of Different layet Types and Their Effect on Receptive Field\n",
+    "\n",
+    "| Technique | Effect on Receptive Field | Trade-off |\n",
+    "| --- | --- | --- |\n",
+    "| **Adding Layers** | Increases linearly | More computation |\n",
+    "| **Max Pooling** | Increases exponentially | Loss of spatial detail (resolution) |\n",
+    "| **Dilated Conv** | Increases exponentially | No resolution loss; \"gridding\" artifacts |\n",
+    "| **Larger Filters** | Increases linearly | High parameter count () |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7244c600",
    "metadata": {},
    "source": []
   }
